--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=SWkMYO9V_-k" />
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=H2eUz5k0Yhw" />
   </head>
   <body>
   </body>
