--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/CorruptedRedShoes/CrashReport/main/media/Colombiana.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/CorruptedRedShoes/CrashReport/main/media/Citlali.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=H2eUz5k0Yhw" />
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=8EmXheuVzFo" />
   </head>
   <body>
   </body>
